--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
             <div class="d-flex gap-3">
               <a href="#" class="btn btn-primary text-uppercase fs-6 rounded-pill px-4 py-3 mt-3">Start Shopping</a>
               <a href="#" class="btn btn-dark text-uppercase fs-6 rounded-pill px-4 py-3 mt-3">Join Now</a>
-            </div>
+            </div><!--
             <div class="row my-5">
               <div class="col">
                 <div class="row text-dark">
@@ -378,7 +378,7 @@
               <div class="col">
                 <div class="row text-dark">
                   <div class="col-auto"><p class="fs-1 fw-bold lh-sm mb-0">1</p></div>
-                  <div class="col"><p class="text-uppercase lh-sm mb-0">Local Farm</p></div>
+                  <div class="col"><p class="text-uppercase lh-sm mb-0">Local Farm</p></div>--><br><br><br></div>
                 </div>
               </div>
             </div>
@@ -2081,7 +2081,7 @@
         </div>
       </div>
     </section>
-
+<!--
     <section class="pb-4 my-4">
       <div class="container-lg">
 
@@ -2097,7 +2097,7 @@
                 </div>
               </div>
               <div class="col-md-5">
-                <img src="images/banner-onlineapp.png" alt="phone" class="img-fluid">
+                <img src="images/banner-onlineapp.png" alt="phone" class="img-fluid">-->
               </div>
             </div>
           </div>
